Emergency Fix: Loosen CORS and credentials to resolve 'Failed to Fetch' on production